# pyspharm

./: CHANGELOG.md  LICENSE  NOTICE  README.md  meson.build  pyproject.toml
.github/workflows/: apply-stage-2-migration.yml  build-linux-wheels.yml  capture-legacy-reference.yml  create-github-release.yml  diagnose-stage3-build.yml  generate-free-form-fortran.yml  package-tests.yml
LICENSES/: BSD-3-Clause.txt  PYSPHARM-LEGACY-PYTHON.txt  UCAR-SPHEREPACK.txt
Lib/: __init__.py  spharm.py
Lib/pyspharm/: __init__.py  api.py  regrid.py  utilities.py
docs/: development.md  release-notes-template.md  release-policy.md
docs/modernization/: 01-scientific-baseline.md  02-packaging-and-compatibility.md  03-fortran-modernization.md  04-python-api.md  05-release-engineering.md  07-diagnostics-api.md  08-fortran-core.md  08.4-spectral-storage.md  08.5-vector-spectral-storage.md  README.md
docs/releases/: 0.1.0.md  0.2.0.md
examples/: README  galewskyetal_testcase.py  geodesic.py  regrid_test.py  spharmonic.py
src/modern/: spharm_kinds.f90  spharm_legacy_interfaces.f90  spharm_point_interpolation.f90  spharm_spectral_operators.f90  spharm_spectral_storage.f90  spharm_vector_spectral_storage.f90
tests/: __init__.py  test_examples.py  test_modern_api.py  test_packaging.py  test_point_interpolation.py  test_regrid.py  test_release_metadata.py  test_spectral_operators.py  test_spectral_storage.py  test_utilities.py  test_vector_spectral_storage.py  test_vector_zero_mode.py
tests/reference/: README.md  __init__.py  baseline.py  generate_legacy_baseline.py  test_legacy_baseline.py  validate_legacy_baseline.py
tests/reference/data/: legacy-contract-v1.npz
tools/fortran/: fixed_to_free.py
tools/maintenance/: modernize_integer_division.py
tools/release/: smoke_test.py  verify_release_metadata.py
