[build-system]
requires = ["meson-python>=0.15", "numpy>=1.26"]
build-backend = "mesonpy"

[project]
name = "pyspharm-ng"
version = "0.1.0"
description = "Maintained Python interface to SPHEREPACK spherical harmonic transforms"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["atmospheric-science", "spherical-harmonics", "spherepack", "spectral-transform"]
authors = [
    { name = "Jeff Whitaker", email = "whitaker.jeffrey@gmail.com" },
]
maintainers = [
    { name = "João Gerd Zell de Mattos" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Fortran",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = ["numpy>=1.26"]

[project.urls]
Homepage = "https://github.com/joaogerd/pyspharm"
Repository = "https://github.com/joaogerd/pyspharm"
Issues = "https://github.com/joaogerd/pyspharm/issues"
Changelog = "https://github.com/joaogerd/pyspharm/blob/master/CHANGELOG.md"

[project.optional-dependencies]
tests = [
    "pytest>=8",
    "hypothesis[numpy]>=6.100",
]
examples = ["matplotlib>=3.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
